# prism

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in
include/prism/: colors.h  entry_point.h  fa_embedings.h  imgui_rip.h  prism.h  renderer.h  window.h
include/prism/embeds/: font_awesome.embed  roboto_bold.embed  roboto_italic.embed  roboto_regular.embed
scripts/: build_dev.bat  build_dev_install.bat
src/: prism.cpp  renderer.cpp  window.cpp
